...
            )

            Spacer(modifier = Modifier.height(2.dp))

            Row(horizontalArrangement = Arrangement.spacedBy(8.dp)) {
                StatefulButton(
                    text = "Tutup",
                    onClick = onCancel,
                    modifier = Modifier.weight(1f),
                    style = ButtonStyle.Outlined,
                    stateType = ButtonStateType.Error,
                    enabled = true
                )
...
