...
                    }
                }
                item {
                    InfiniteButton(
                        text = stringResource(R.string.wfa_request_view_status),
                        onClick = onDone,
                        modifier = Modifier.fillMaxWidth().testTag("wfaDoneAction"),
                        variant = InfiniteButtonVariant.Outlined,
                        fullWidth = true
                    )
                }
                item {
                    InfiniteButton(
...
